updated the info and add lnks

--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -11,7 +11,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="Conn" connectionString="data source=.\sqlexpress;initial catalog=CatalogSample;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Conn" connectionString="data source=.\sqlexpress;initial catalog=McDellSample3;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
