--- a/mdl/App.config
+++ b/mdl/App.config
@@ -11,6 +11,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="Conn" connectionString="data source=.\sqlexpress;initial catalog=CatalogSample;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Conn" connectionString="data source=.\sqlexpress;initial catalog=McDellSample3;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
